# renomeador-pdf-ocr

./: CHECKLIST_ARQUIVOS.txt  DEPLOYMENT.md  GITHUB_UPLOAD.md  INICIAR.md  RENDER_SETUP.md  app.py  app_backup.py  deploy.sh  pyproject.toml  render.yaml  replit.md  requirements_render.txt  start.sh  test_simple.py
.streamlit/: config.toml
core/: __init__.py  batch_manager.py  ocr.py  parser.py
